--- a/researcher/templates/researcher/layouts/showProject.html
+++ b/researcher/templates/researcher/layouts/showProject.html
@@ -88,7 +88,7 @@
                     </div>
                 </form>
             </div>
-            <div class="row">
+            <div class="row comments-diolag">
                 <div class="col-lg-12 text-right">
                     {% include 'researcher/layouts/comment.html' %}
                 </div>
