--- a/researcher/templates/researcher/layouts/projectList.html
+++ b/researcher/templates/researcher/layouts/projectList.html
@@ -4,9 +4,9 @@
     <div class="row">
         <div class="col-lg-12">
             <ul class="nav nav-tabs w-100" id="project-list">
-                <li class="nav-item"><a class="nav-link active" id="new-projects" href="#new-projects">جدیدترین پروژه ها</a></li>
-                <li class="nav-item"><a class="nav-link" id="your-project" href="#your-project">پروژه های مرتبط</a></li>
-                <li class="nav-item"><a class="nav-link" id="done-project" href="#done-project">پروژه های انجام شده</a></li>
+                <li class="nav-item"><a class="nav-link active" id="new-projects" href="//">جدیدترین پروژه ها</a></li>
+                <li class="nav-item"><a class="nav-link" id="your-project" href="//">پروژه های مرتبط</a></li>
+                <li class="nav-item"><a class="nav-link" id="done-project" href="//">پروژه های انجام شده</a></li>
             </ul>
             <div class="tab-content new-projects" style="display: block;">
                 <div class="fuck"></div>
@@ -22,12 +22,35 @@
                         <span><i class="fas fa-calendar-alt"></i>این پروژه به  <span>8 ساعت</span> وقت در هفته نیاز دارد!</span>
                         <span><i class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>{{project.finished}}</span> فرصت باقی است!</span>
                         <button type="button" class="chamran-btn-info" id="{{project.PK}}">مشاهده</button>
-                        <button type="button" class="chamran-btn-delete">رد</button>
                     </div>
                     {% endfor %}
             </div>
-            <div class="tab-content your-project" style="display: none;"></div>
-            <div class="tab-content done-project" style="display: none;"></div>
+            <div class="tab-content your-project" style="display: none;">
+                {% for project in my_project_list %}
+                    <div class="card project-item">                    
+                        <span class="header">{{project.project_title}} <span class="sub-header">( {{project.started}} قبل )</span></span>
+                        <span>                            
+                            {% for keyword in project.keyword %}
+                                <span class="border-span">{{keyword.name}}</span>
+                            {% endfor %}
+                        </span>
+                        <span><i class="fas fa-calendar-alt"></i>این پروژه به  <span>8 ساعت</span> وقت در هفته نیاز دارد!</span>
+                        <span><i class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>{{project.finished}}</span> فرصت باقی است!</span>
+                        <button type="button" class="chamran-btn-info my-project" value="myproject" id="{{project.PK}}">مشاهده</button>
+                    </div>
+                    {% endfor %}
+            </div>
+            <div class="tab-content done-project" style="display: none;">
+                {% for project in done_project_list %}
+                <div class='card project-item'>
+                    <span class='header'>{{project.project_title}}<span class='sub-header'>{{project.started}} قبل )</span></span>
+                    <span><i class='fas fa-calendar-alt'></i>این پروژه به  <span>8 ساعت</span> وقت در هفته نیاز دارد!</span>
+                    <span><i class='fas fa-hourglass-end'></i>تا اتمام پروژه <span> {{project.finished}} </span> فرصت باقی است!</span>
+                    <span><i class='fas fa-hourglass-end'></i>درأمد : <span> {{project.income}} </span> کسب کرده اید.</span>
+                    <span><i class='fas fa-hourglass-end'></i>تکنیک های مورد استفاده : <span> {{project.technique}} </span></span>
+                </div>
+                {% endfor %}
+            </div>
         </div>
     </div>
 </div>
