researcher comment fix

--- a/researcher/templates/researcher/layouts/projectList.html
+++ b/researcher/templates/researcher/layouts/projectList.html
@@ -10,7 +10,7 @@
             </ul>
             <div class="tab-content new-projects" style="display: block;">
                 <div class="fuck"></div>
-                    {% for project in project_list %}
+                    {% for project in new_project_list %}
                     <div class="card project-item">                    
                         <span class="header">{{project.project_title}} <span class="sub-header">( {{project.started}} قبل )</span></span>
                         <span>
