--- a/industry/templates/industry/layouts/base_layout.html
+++ b/industry/templates/industry/layouts/base_layout.html
@@ -34,7 +34,7 @@
                             alt="profile" class="dropdown-img profile" height="45px">
             </button>
             <ul class="dropdown-menu text-center" role="menu" aria-labelledby="dropdown-btn" id="dropdown">
-                <li><a href="{% url 'researcher:userInfo' %}">اطلاعات کاربری<i class="fas fa-cog"></i></a></li>
+                <li><a href="{% url 'industry:userInfo' %}">اطلاعات کاربری<i class="fas fa-cog"></i></a></li>
                 <li><a href="{% url 'chamran:send_reset_email' %}">تغییر رمز عبور<i class="fas fa-pen"></i></a></li>
                 <li class="divider"></li>
                 <li><a href="{% url 'chamran:logout' %}">خروج<i class="fas fa-sign-out-alt"></i></a></li>
@@ -61,7 +61,7 @@
         <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ user.industryuser.industry_points|default:0 }}</span>/10</p>
         <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="{{ user.industryuser.score|default:0 }}" aria-valuemin="0"
-                 aria-valuemax="100" style="width: {{user.industryuser.score}} px">
+                 aria-valuemax="100" style="width: {{user.industryuser.score}}px">
                 <span class="sr-only">{{ user.industryuser.score|default:0 }}% completed</span>
             </div>
         </div>
