--- a/industry/templates/industry/newProject.html
+++ b/industry/templates/industry/newProject.html
@@ -17,7 +17,7 @@
         }
     </style>
 {% endblock %}
-{% block name %}رضا باسره{% endblock %}
+{% block name %}{{request.user.industryuser.industryform}}{% endblock %}
 
 {% block content %}
     <div class="row">
@@ -119,11 +119,11 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12 text-right">
+                            <!-- <div class="col-lg-12 text-right">
                                 <span class="sub-header">جهت انجام پروژه خود به چه تخصص ها و چه تکنیک ها آزمایشگاهی ای احتیاج دارید؟</span>
                                 {% render_field form.required_technique class="w-100" rows="4" dir="rtl" placeholder="اینجا وارد کنید ..." style="margin-top:0" %}
                                 {% render_field form.required_technique.errors %}
-                            </div>
+                            </div> -->
                         </div>
                         <div class="row">
                             <div class="col-lg-12 text-right">
