add info for using keyword in newProject page

--- a/industry/templates/industry/newProject.html
+++ b/industry/templates/industry/newProject.html
@@ -44,6 +44,9 @@
                                 <label for="id_key_words">کلیدواژه ها</label>
                                 {% render_field form.key_words class="w-100" %}
                                 {% render_field form.key_words.erros class="w-100" %}
+                                <div class="div-info">
+                                    * پس از وارد کردن کلیدواژه کلید Enter را فشار دهید، برای حذف کلیدواژه های قبلی می توانید از آیکون حذف بهره ببرید.
+                                </div>
                             </div>
                         </div>
                         <div class="row">
