setup comments tab for industry user

--- a/industry/templates/industry/layouts/comment.html
+++ b/industry/templates/industry/layouts/comment.html
@@ -1,5 +1,10 @@
 {% load static %}
 <span class="section-title">نظرات</span>
+<div class="project-info-tabs">
+    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
+         aria-orientation="vertical">
+    </div>
+</div>
 <div class="section">
     <div class="project-comment-innerDiv">
         <div class="comments"></div>
