--- a/industry/templates/industry/layouts/showProject.html
+++ b/industry/templates/industry/layouts/showProject.html
@@ -5,9 +5,9 @@
         <div class="card-head">عنوان پروژه</div>
         <div class="vote">
             <span class="dots"></span>
-        </div>
-        <div class="vote-dialog">
-            <div class="card expert-back text-center">ارزیابی از استاد</div>
+            <div class="vote-dialog">
+                <div class="card expert-back text-center">ارزیابی از استاد</div>
+            </div>
         </div>
         <div class="container">
             <div class="row">
@@ -110,7 +110,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row add-comment">
                 <div class="col-lg-12 text-right">
                     {% include 'industry/layouts/comment.html' %}
                 </div>
