industry sending comment fixed

--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -38,7 +38,7 @@
 {#                                    </div>#}
 {#                                </div>#}
                                 <div class="employer"><i class="far fa-envelope"></i> پیام ها</div>
-                                <button class="chamran-btn-info default-btn show-btn" type="button" id="{{ project.id }}">مشاهده</button>
+                                <button class="chamran-btn-info default-btn show-btn show-project" type="button" id="{{ project.id }}">مشاهده</button>
                                 <div class="timetable"><i></i> در حال بررسی!</div>
                                 <div class="check-circle"><i class="fas fa-spinner fa-pulse fa-lg"></i></div>
 {#                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 496">#}
@@ -128,7 +128,7 @@
                                 {% if project.expert_accepted %}
                                 <div class="employer"><i class="fas fa-user-tie"></i> استاد {{project.expert_accepted.expertform}}</div>
                                 {% endif %}
-                                <button class="chamran-btn-info default-btn show-btn" type="button" id="{{ project.id }}">مشاهده</button>
+                                <button class="chamran-btn-info default-btn show-btn show-project" type="button" id="{{ project.id }}">مشاهده</button>
                                 <div class="timetable"><i class="fas fa-hourglass-half"></i> 2 ماه</div>
                                 <div class="active-circle"></div>
                             </div>
@@ -188,7 +188,7 @@
                                 {% if project.expert_accepted %}
                                 <div class="employer"><i class="fas fa-user-tie"></i> استاد {{project.expert_accepted.expertform}}</div>
                                 {% endif %}
-                                <button class="chamran-btn-info" type="button" id="{{ project.id }}">نمایش</button>
+                                <button class="chamran-btn-info show-btn show-project" type="button" id="{{ project.id }}">نمایش</button>
                                 <div class="timetable"><i></i> معلق!</div>
                                 <div class="refuse-circle">
                                     <i class="fas fa-ban fa-lg"></i>
