set tabs and some comment configs

--- a/industry/templates/industry/layouts/comment.html
+++ b/industry/templates/industry/layouts/comment.html
@@ -1,6 +1,6 @@
 {% load static %}
 <span class="section-title">نظرات</span>
-<div class="project-info-tabs">
+<div class="project-info-tabs comment-tabs">
     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
          aria-orientation="vertical">
     </div>
