--- a/templates/404Template.html
+++ b/templates/404Template.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/style1.css' %}">
 </head>
-<body>
-
+<body class="notFound">
+    <div class="logo-404">
+        <img src="{% static 'img/404.svg' %}" alt="404 logo">
+    </div>
+    <h1>خطا 404</h1>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -20,5 +23,3 @@
     <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
-
-ml>
