fixed voting button

--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -129,7 +129,7 @@
                                 <div class="employer"><i class="fas fa-user-tie"></i> استاد {{project.expert_accepted.expertform}}</div>
                                 {% endif %}
                                 <button class="chamran-btn-info default-btn show-btn show-project" type="button" id="{{ project.id }}">مشاهده</button>
-                                <div class="timetable"><i class="fas fa-hourglass-half"></i> 2 ماه</div>
+                                <div class="timetable"><i class="fas fa-hourglass-half"></i> {{project.time_left}}</div>
                                 <div class="active-circle"></div>
                             </div>
                         </div>
