--- a/industry/templates/industry/layouts/base_layout.html
+++ b/industry/templates/industry/layouts/base_layout.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="csrf-token" content="{% csrf_token %}">
     <title>{% block title %}{% endblock %}</title>
     <link rel="icon" href="{% static 'industry/img/logo.ico' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -58,10 +59,12 @@
                     alt="profile" class="profile" width="150px" height="150px">
         <h5>{% block name %}{% endblock %}</h5>
         <h6>صنعت</h6>
-        <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ user.industryuser.industry_points|default:0 }}</span>/10</p>
+        <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ user.industryuser.industry_points|default:0 }}</span>/10
+        </p>
         <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="{{ user.industryuser.score|default:0 }}" aria-valuemin="0"
-                 aria-valuemax="100" style="width: {{user.industryuser.score}}px">
+            <div class="progress-bar" role="progressbar" aria-valuenow="{{ user.industryuser.score|default:0 }}"
+                 aria-valuemin="0"
+                 aria-valuemax="100" style="width: {{ user.industryuser.score }}px">
                 <span class="sr-only">{{ user.industryuser.score|default:0 }}% completed</span>
             </div>
         </div>
