--- a/templates/404Template.html
+++ b/templates/404Template.html
@@ -24,7 +24,7 @@
 <p dir="rtl">
     لطفا آدرس وارد شده را بررسی و دوباره امتحان کنید !
 </p>
-<form>
+<form action="{% url 'chamran:login' %}">
     <button type="submit">بازگشت به خانه</button>
 </form>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
