send Comment to Researcher

--- a/expert/templates/expert/layouts/researcher_info_dialog.html
+++ b/expert/templates/expert/layouts/researcher_info_dialog.html
@@ -102,7 +102,7 @@
                    </div>
                    <div class="row mbottom-lg-25">
                        <div class="col-lg-12 text-right">
-                           <div class="status" status="researcher" url="{% url  'expert:researcher_comment' %}">
+                           <div class="status" status="researcher">
                                 {% include 'expert/layouts/comment.html' %}
                            </div>
                        </div>
