--- a/expert/templates/expert/layouts/comment.html
+++ b/expert/templates/expert/layouts/comment.html
@@ -6,11 +6,8 @@
         <div class="add-comment">
             <form action="" method="POST" enctype="multipart/form-data" id="comment-form">
                 {% csrf_token %}
-                <input type="text" name="project_id" id="project_id" hidden>
-                <input type="text" name="researcher_id" id="" hidden>
-                <input type="text" name="comment_replyed" id="comment_replyed" value="None" hidden>
                 <div class="row">
-                    <input type="text" class="project_id" value="" hidden>
+                    <input type="text" class="project_id" name="project_id" value="" hidden>
                     <input type="text" class="researcher_id" name="researcher_id" value="" hidden>
                     <input type="text" name="comment_replyed" id="comment_replyed" value="None" hidden>
                     <div class="col-lg-12">
