structure of fix dialog

--- a/industry/templates/industry/layouts/comment.html
+++ b/industry/templates/industry/layouts/comment.html
@@ -5,6 +5,16 @@
          aria-orientation="vertical">
     </div>
 </div>
+<div class="">
+    <p>
+
+    </p>
+    <div>
+        <button></button>
+        <button></button>
+        <button></button>
+    </div>
+</div>
 <div class="section">
     <div class="industry-comment"></div>
     <div class="project-comment-innerDiv">
