fix Box and Resume dialog

--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -8,6 +8,7 @@
     {% endif %}
     {% include 'industry/layouts/showProject.html' %}
     {% include 'industry/layouts/vote_dialog.html' %}
+    {% include 'industry/layouts/expertResume.html' %}
 {% endblock %}
 
 {% block name %}{{request.user.industryuser.industryform}}{% endblock %}
