--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -131,6 +131,21 @@
                                 {% else %}
                                     <div class="employer"><i class="far fa-envelope"></i> پیام ها</div>
                                 {% endif %}
+                                <button class="chamran-btn-info default-btn show-btn show-project" type="button" id="{{ project.id }}">مشاهده</button>
+                                <div class="timetable"><i class="fas fa-hourglass-half"></i> {{project.time_left}}</div>
+                                <div class="active-circle"></div>
+                            </div>
+                        </div>
+                    {% elif project.status == 2 %}
+                        <div class="col-lg-6 col-md-6">
+                            <div class="card project-card text-right">
+                                <h6> {{ project.project_form.project_title_persian }}</h6>
+                                
+                                {% if project.industryUnseenCommentCount != 0 %}
+                                    <div class="employer"><i class="far fa-envelope"></i> پیام ها{{project.industryUnseenCommentCount}}</div>
+                                {% else %}
+                                    <div class="employer"><i class="far fa-envelope"></i> پیام ها</div>
+                                {% endif %}
                                     
                                 {% if project.expert_accepted %}
                                 <div class="employer"><i class="fas fa-user-tie"></i> استاد {{project.expert_accepted.expertform}}</div>
@@ -185,7 +200,7 @@
 {#                                <div class="bottom-line"></div>#}
 {#                            </div>#}
 {#                        </div>#}
-                    {% elif project.status == 2 %}
+                    {% elif project.status == 3 %}
                         <div class="col-lg-6 col-md-6">
                             <div class="card project-card text-right">
 {#                                <div class="status-line refuse"></div>#}
@@ -210,7 +225,7 @@
                                 <!-- <div class="bottom-line"></div> -->
                             </div>
                         </div>
-                    {% elif project.status == 3 %}
+                    {% elif project.status == 4 %}
                         <div class="col-lg-6 col-md-6">
                             <div class="card project-card text-right">
 {#                                <div class="status-line"></div>#}
