--- a/expert/templates/expert/researcherRequest.html
+++ b/expert/templates/expert/researcherRequest.html
@@ -56,7 +56,7 @@
     {#                                                   <button class="accept-researcher">تایید</button>#}
     {#                                                   <button class="refuse-researcher">رد</button>#}
                                             <button class="researcher-card-button-show"  value="{{project.id}}" id="{{ researcher.profile.id }}" data-url="{% url 'expert:show_researcher_preview' %}">مشاهده</button>
-                                            <button class="researcher-card-button-check" id="{{ researcher.profile.id }}">تایید</button>
+                                            <button class="researcher-card-button-check confirm-researcher" id="{{ researcher.profile.id }}">تایید</button>
                                             <div class="close"></div>
                                         </div>
                                     </div>
