--- a/researcher/templates/researcher/layouts/preview_question.html
+++ b/researcher/templates/researcher/layouts/preview_question.html
@@ -4,16 +4,14 @@
 {% block content %}
     <div class="preview-question">
         <div class="card info-card text-right">
-            <div class="card-header"> سوال پژوهشی{{ question_title }}</div>
+            <div class="card-header"> سوال پژوهشی </div>
             <div class="inner-card">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="textarea-text">
-                            <span class="title">متن سوال</span>
-                            <div class="body">
+                        <h6 class="green">{{ question_title }}</h6>
+                            <div>
                                 {{ question }}
                             </div>
-                        </div>
                     </div>
                 </div>
                 <div class="row">
@@ -46,30 +44,30 @@
                 <div class="row">
                     <div class="col-12 text-center left-time-counter">
                         <h5>مدت زمان باقی مانده</h5>
-                        <div class="wrap text-center">
-                            <div class="day">
+                        <div class="wrap text-center row">
+                            <div class="day col-md-4">
                                 <span class="count">{{ second }}</span>
                                 <span>روز</span>
                             </div>
-                            <div class="hour">
+                            <div class="hour col-md-4">
                                 <span class="count">{{ hour }}</span>
                                 <span>ساعت</span>
                             </div>
-                            <div class="minute">
+                            <div class="minute col-md-4">
                                 <span class="count">{{ minute }}</span>
                                 <span>دقیقه</span>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="progress question-progress">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                                 aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-                        </div>
-                    </div>
-                </div>
+{#                <div class="row">#}
+{#                    <div class="col-12">#}
+{#                        <div class="progress question-progress">#}
+{#                            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"#}
+{#                                 aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
                 <form method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="row">
